Gray-Space/src/objects/MV_MovieShort__c.object
<CustomObject>
    <fields>
        <fullName>MV_Backdrop_Path__c</fullName>
        <label>Backdrop Path</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MV_The_Movie_DB_ID__c</fullName>
        <externalId>true</externalId>
        <label>The Movie DB ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Favorite</fullName>
                </value>
                <value>
                    <fullName>Blacklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FavoriteMovies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MovieShort</label>
    <nameField>
        <label>MovieShort Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MoviesShort</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>